Fixed grids on mobile breakpoints

--- a/client/src/pages/FavouritesPage/FavouritesPage.scss
+++ b/client/src/pages/FavouritesPage/FavouritesPage.scss
@@ -29,6 +29,15 @@
   &__filter-card-title {
     font-family: $primary-font;
     color: $primary-dark-blue;
+    font-size: .75rem;
+
+    @include large-mobile {
+      font-size: .8rem;
+    }
+
+    @include tablet {
+      font-size: 1rem;
+    }
   }
 
   &__heart-icon {
@@ -71,6 +80,7 @@
       color: $primary-button-blue;
       transform: scale(.9);
     }
+
     @include tablet {
       @include block-item(1rem, auto);
     }
@@ -119,41 +129,41 @@
     transition: all .3s ease; 
 
     &:hover {
-        background-color: $primary-dark-blue;
-        color: $neutral-white;
-        padding: 1rem; 
-        border-radius: .5rem; 
-        transform: translateX(-50%) scale(1.25); 
+      background-color: $primary-dark-blue;
+      color: $neutral-white;
+      padding: 1rem; 
+      border-radius: .5rem; 
+      transform: translateX(-50%) scale(1.25); 
     }
 
     &:active {
-        transform: translateX(-50%) scale(1);
-        box-shadow: $shadow-senary;
+      transform: translateX(-50%) scale(1);
+      box-shadow: $shadow-senary;
     }
 
     @include small-mobile {
-        top: 1rem;
+      top: 1rem;
     }
 
     @include large-mobile {
-        top: 1rem;
+      top: 1rem;
     }
 
     @include tablet {
-        top: .25rem;
-        font-size: 1.5rem;
+      top: .25rem;
+      font-size: 1.5rem;
     }
 
     @include desktop {
-        top: 4.5rem;
+      top: 4.5rem;
     }
 
     @include large-desktop {
-        top: 9rem;
+      top: 9rem;
     }
 
     @include extra-large-desktop {
-        top: 11.5rem;
+      top: 11.5rem;
     }
   }
 
@@ -317,17 +327,24 @@
 
   &__grid {
     display: grid;
-    grid-template-columns: 1fr;
-    gap: 1.25rem;
+    grid-template-columns: repeat(1, 1fr);
+    gap: .5rem;
+    align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
 
     @include tablet {
       grid-template-columns: repeat(2, 1fr);
+      gap: 1.75rem;
     }
 
     @include desktop {
       grid-template-columns: repeat(4, 1fr);
       gap: 2.5rem;
+    }
+
+    @include large-desktop {
+      gap: 2.75rem;
     }
   }
 
@@ -550,7 +567,8 @@
     padding: .625rem 1.25rem;
     font-size: .85rem;
     font-family: $primary-font;
-    margin-left: .5rem;
+    line-height: .75rem;
+    width: 5.25rem;
     cursor: pointer;
     font-weight: bold;
     transition: background .3s ease, transform .3s ease, box-shadow .3s ease;
@@ -562,6 +580,7 @@
       color: $neutral-white;
       box-shadow: 0 .375rem .5rem rgba($neutral-black, .15);
       font-weight: normal;
+      margin-left: .5rem;
     }
 
     &:active {
@@ -574,6 +593,10 @@
     &:focus {
       outline: none;
       box-shadow: $shadow-septenary;
+    }
+
+    @include tablet {
+      @include block-item(10rem, 3rem);
     }
   }
 
@@ -588,6 +611,8 @@
     font-size: .85rem;
     font-family: $primary-font;
     margin-left: .5rem;
+    line-height: .75rem;
+    width: 5.25rem;
     cursor: pointer;
     font-weight: bold;
     transition: background .3s ease, transform .3s ease, box-shadow .3s ease;
@@ -612,6 +637,10 @@
       outline: none;
       box-shadow: $shadow-septenary;
     }
+
+    @include tablet {
+      @include block-item(10rem, 3rem);
+    }
   }
 
   &__fetch-more {
@@ -624,7 +653,9 @@
     padding: .625rem 1.25rem;
     font-size: .85rem;
     font-family: $primary-font;
+    line-height: .75rem;
     margin-left: .5rem;
+    width: 5.25rem;
     cursor: pointer;
     font-weight: bold;
     transition: background .3s ease, transform .3s ease, box-shadow .3s ease;
@@ -647,6 +678,10 @@
     &:focus {
       outline: none;
       box-shadow: $shadow-septenary;
+    }
+
+    @include tablet {
+      @include block-item(10rem, 3rem);
     }
   }
 
@@ -696,8 +731,8 @@
         }
 
         &:active {
-            color: $primary-medium-blue;
-            transform: scale(.9);
+          color: $primary-medium-blue;
+          transform: scale(.9);
         }
       }
     }
@@ -705,18 +740,39 @@
 
   &__filters {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: .25rem;
+    justify-content: center;
     width: 100%;
     margin-bottom: 2rem;
 
+    @include large-mobile {
+      grid-template-columns: repeat(3, 1fr);
+      width: 100%;
+      gap: .5rem;
+    }
+
     @include tablet {
+      grid-template-columns: repeat(4, 1fr); 
       width: 80%;
-      gap: 1.5rem;
+      gap: 1.1rem;
     }
 
     @include desktop {
+      grid-template-columns: repeat(5, 1fr); 
       width: 75%;
+      gap: 2rem;
+    }
+
+    @include large-desktop {
+      grid-template-columns: repeat(10, 1fr); 
+      width: 75%;
+      gap: 1rem;
+    }
+
+    @include extra-large-desktop {
+      grid-template-columns: repeat(10, 1fr); 
+      width: 90%;
       gap: 2rem;
     }
   }
@@ -730,9 +786,9 @@
       transform: scale(1.125);
     }
 
-      &:active {
-        color: $primary-medium-blue;
-        transform: scale(.9);
+    &:active {
+      color: $primary-medium-blue;
+      transform: scale(.9);
     }
   }
 
@@ -741,7 +797,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
+    padding: 0.5rem;
     background: rgba($neutral-white, .7);
     backdrop-filter: blur(.625rem);
     border-radius: .9375rem;
@@ -750,6 +806,8 @@
     transition: transform .3s ease-in-out, box-shadow .3s ease-in-out;
     cursor: pointer;
     text-align: center;
+    width: 100%; 
+    aspect-ratio: 1 / 1; 
 
     &:hover {
       transform: scale(1.05);
@@ -764,10 +822,20 @@
     @include tablet {
       padding: 1.5rem;
     }
+
+    &.faves-page__hide-filter-card {
+      display: none;
+
+      @include tablet {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
   }
 
   &__filter-icon {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: .5rem;
     color: $neutral-light-grey;
     color: $primary-button-dark-blue;
@@ -789,7 +857,7 @@
       padding: .5rem;
     }
   }
-  
+
   @keyframes wiggle {
     0%, 100% {
       transform: rotate(-3deg);
@@ -801,12 +869,12 @@
 
   &__action-buttons {
     display: flex;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
+    justify-content: space-around;
+    align-items: center;
 
     @include tablet {
       margin-top: 1.5rem;
+      gap: 1rem;
     }
   }
 }
